# drf-api-permissions-postgres

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
snacks/: models.py  permissions.py  serializers.py  views.py
snacks/migrations/: 0001_initial.py
